Feriennet: Word Change
TYPE: Bugfix
LINK: PRO-1402

--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2821,7 +2821,7 @@ msgid "Homepage"
 msgstr "Pagina principale"
 
 msgid "Save"
-msgstr "Risparmiare"
+msgstr "Salvare"
 
 msgid "Edit"
 msgstr "Modifica"
