--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-03 09:15+0200\n"
+"POT-Creation-Date: 2025-07-07 15:20+0200\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -289,29 +289,35 @@ msgstr "Archives des chats"
 msgid "Meetings"
 msgstr "Réunions"
 
-msgid "Meeting"
-msgstr "Réunion"
-
-msgid "Parliamentarians"
-msgstr "Parlementaires"
-
 msgid "RIS Settings"
 msgstr "Paramètres RIS"
+
+msgid "Meeting"
+msgstr "Réunion"
 
 msgid "Parliamentarian"
 msgstr "Parlementaire"
 
-msgid "Role (as a party or group member)"
-msgstr "Rôle (en tant que membre d'un parti ou d'un groupe)"
-
 msgid "Edit"
 msgstr "Modifier"
 
-msgid "Do you really want to delete this parliamentarian?"
-msgstr "Voulez-vous vraiment supprimer ce parlementaire ?"
+msgid "Do you really want to delete this meeting?"
+msgstr "Voulez-vous vraiment supprimer cette réunion?"
 
 msgid "This cannot be undone."
 msgstr "Cela ne peut être effectué."
+
+msgid "Delete meeting"
+msgstr "Supprimer la réunion"
+
+msgid "Parliamentarians"
+msgstr "Parlementaires"
+
+msgid "Role (as a party or group member)"
+msgstr "Rôle (en tant que membre d'un parti ou d'un groupe)"
+
+msgid "Do you really want to delete this parliamentarian?"
+msgstr "Voulez-vous vraiment supprimer ce parlementaire ?"
 
 msgid "Delete parliamentarian"
 msgstr "Supprimer le parlementaire"
@@ -586,8 +592,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
-"« Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
+"Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
@@ -1596,6 +1602,9 @@ msgid "You can see the current status of your ticket at any time here:"
 msgstr ""
 "Vous pouvez consulter le statut actuel de votre billet à tout moment ici:"
 
+msgid "Date/Time"
+msgstr "Date/Heure"
+
 msgid "Agenda"
 msgstr "Agenda"
 
@@ -2448,8 +2457,26 @@ msgstr "Nouvelle commission"
 msgid "Your changes were saved"
 msgstr "Vos modifications ont été enregistrées"
 
+msgid "The commission has been deleted."
+msgstr "La commission a été supprimée."
+
 msgid "Sort"
 msgstr "Trier"
+
+msgid "Added a new meeting."
+msgstr "Ajout d'une nouvelle réunion."
+
+msgid "New Meeting"
+msgstr "Nouvelle réunion"
+
+msgid "Your changes were saved."
+msgstr "Vos modifications ont été enregistrées."
+
+msgid "Edit Meeting"
+msgstr "Éditer la réunion"
+
+msgid "The meeting has been deleted."
+msgstr "La réunion a été supprimée."
 
 msgid "Added a new parliamentarian"
 msgstr "Ajout d'un nouveau parlementaire"
@@ -2457,11 +2484,17 @@ msgstr "Ajout d'un nouveau parlementaire"
 msgid "New parliamentarian"
 msgstr "Nouveau parlementaire"
 
+msgid "The parliamentarian has been deleted."
+msgstr "Le parlementaire a été supprimé."
+
 msgid "Added a new role"
 msgstr "Ajout d'un nouveau rôle"
 
 msgid "New role"
 msgstr "Nouveau rôle"
+
+msgid "The parliamentarian role has been deleted."
+msgstr "Le rôle du parlementaire a été supprimé."
 
 msgid "Added a new parliamentary group"
 msgstr "Ajout d'un nouveau groupe parlementaire"
@@ -2469,11 +2502,17 @@ msgstr "Ajout d'un nouveau groupe parlementaire"
 msgid "New parliamentary group"
 msgstr "Nouveau groupe parlementaire"
 
+msgid "The parliamentary group has been deleted."
+msgstr "Le groupe parlementaire a été supprimé."
+
 msgid "Added a new party"
 msgstr "Ajout d'un nouveau parti"
 
 msgid "New party"
 msgstr "Nouveau parti"
+
+msgid "The party has been deleted."
+msgstr "Le parti a été supprimé."
 
 msgid "New Recipient"
 msgstr "Nouveau destinataire"
