--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2025-07-03 09:15+0200\n"
+"POT-Creation-Date: 2025-07-07 15:20+0200\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -285,29 +285,35 @@ msgstr "Archivio chat"
 msgid "Meetings"
 msgstr "Riunioni"
 
-msgid "Meeting"
-msgstr "Riunione"
-
-msgid "Parliamentarians"
-msgstr "Parlamentari"
-
 msgid "RIS Settings"
 msgstr "Impostazioni RIS"
+
+msgid "Meeting"
+msgstr "Riunione"
 
 msgid "Parliamentarian"
 msgstr "Parlamentare"
 
-msgid "Role (as a party or group member)"
-msgstr "Ruolo (come membro di un partito o di un gruppo)"
-
 msgid "Edit"
 msgstr "Modifica"
 
-msgid "Do you really want to delete this parliamentarian?"
-msgstr "Vuole davvero cancellare questo parlamentare?"
+msgid "Do you really want to delete this meeting?"
+msgstr "Vuoi davvero cancellare questa riunione?"
 
 msgid "This cannot be undone."
 msgstr "L'operazione non può essere annullata."
+
+msgid "Delete meeting"
+msgstr "Elimina riunione"
+
+msgid "Parliamentarians"
+msgstr "Parlamentari"
+
+msgid "Role (as a party or group member)"
+msgstr "Ruolo (come membro di un partito o di un gruppo)"
+
+msgid "Do you really want to delete this parliamentarian?"
+msgstr "Vuole davvero cancellare questo parlamentare?"
 
 msgid "Delete parliamentarian"
 msgstr "Elimina parlamentare"
@@ -1589,6 +1595,9 @@ msgid "You can see the current status of your ticket at any time here:"
 msgstr ""
 "Qui potete vedere lo stato attuale del vostro biglietto in qualsiasi momento:"
 
+msgid "Date/Time"
+msgstr "Data/Ora"
+
 msgid "Agenda"
 msgstr "Agenda"
 
@@ -2444,8 +2453,26 @@ msgstr "Nuova commissione"
 msgid "Your changes were saved"
 msgstr "Le modifiche sono state salvate"
 
+msgid "The commission has been deleted."
+msgstr "La commissione è stata eliminata."
+
 msgid "Sort"
 msgstr "Ordinare"
+
+msgid "Added a new meeting."
+msgstr "Aggiunta una nuova riunione."
+
+msgid "New Meeting"
+msgstr "Nuova riunione"
+
+msgid "Your changes were saved."
+msgstr "Le modifiche sono state salvate."
+
+msgid "Edit Meeting"
+msgstr "Modifica la riunione"
+
+msgid "The meeting has been deleted."
+msgstr "La riunione è stata eliminata."
 
 msgid "Added a new parliamentarian"
 msgstr "Aggiunto un nuovo parlamentare"
@@ -2453,11 +2480,17 @@ msgstr "Aggiunto un nuovo parlamentare"
 msgid "New parliamentarian"
 msgstr "Nuovo parlamentare"
 
+msgid "The parliamentarian has been deleted."
+msgstr "Il parlamentare è stato eliminato."
+
 msgid "Added a new role"
 msgstr "Aggiunto un nuovo ruolo"
 
 msgid "New role"
 msgstr "Nuovo ruolo"
+
+msgid "The parliamentarian role has been deleted."
+msgstr "Il ruolo del parlamentare è stato eliminato."
 
 msgid "Added a new parliamentary group"
 msgstr "Aggiunto un nuovo gruppo parlamentare"
@@ -2465,11 +2498,17 @@ msgstr "Aggiunto un nuovo gruppo parlamentare"
 msgid "New parliamentary group"
 msgstr "Nuovo gruppo parlamentare"
 
+msgid "The parliamentary group has been deleted."
+msgstr "Il gruppo parlamentare è stato eliminato."
+
 msgid "Added a new party"
 msgstr "Aggiunto un nuovo partito"
 
 msgid "New party"
 msgstr "Nuovo partito"
+
+msgid "The party has been deleted."
+msgstr "Il partito è stato eliminato."
 
 msgid "New Recipient"
 msgstr "Nuovo destinatario"
