--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-03 09:15+0200\n"
+"POT-Creation-Date: 2025-07-09 10:28+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -289,14 +289,14 @@ msgstr "Chat-Archiv"
 msgid "Meetings"
 msgstr "Sitzungen"
 
+msgid "RIS Settings"
+msgstr "Ratsinformationssystem"
+
 msgid "Meeting"
 msgstr "Sitzung"
 
 msgid "Parliamentarians"
 msgstr "Parlamentarierinnen und Parlamentarier"
-
-msgid "RIS Settings"
-msgstr "Ratsinformationssystem"
 
 msgid "Parliamentarian"
 msgstr "Parlamentarier:in"
@@ -1598,6 +1598,9 @@ msgstr "Ihre Anfrage wurde wieder eröffnet"
 msgid "You can see the current status of your ticket at any time here:"
 msgstr "Sie sehen den aktuellen Status Ihrer Anfrage jederzeit hier:"
 
+msgid "Date/Time"
+msgstr "Datum/Zeit"
+
 msgid "Agenda"
 msgstr "Traktanden"
 
@@ -2059,6 +2062,16 @@ msgstr ""
 "Kalender-Applikation das Abonnoment aktualisiert (sofern das überhaupt "
 "geschieht). Deshalb ist die Information in der Kalender-Applikation mit "
 "Vorsicht zu geniessen."
+
+msgid ""
+"If you want key codes to be included in the event's description then you may "
+"use the following link instead. Please note however that anyone you share "
+"this link with will have permanent access to this information."
+msgstr ""
+"Falls sie die Schlüsselcodes in der Termin-Beschreibung sehen möchten, "
+"können Sie stattdessen den folgenden Link verwenden. Beachten Sie jedoch, "
+"dass jeder, der diesen Link kennt, einen permanenten Zugriff auf diese "
+"Information hat."
 
 msgid "Reservations must be made at least one day in advance."
 msgstr "Reservationen müsen mindestens ein Tag im Voraus gemacht werden."
@@ -2579,9 +2592,6 @@ msgstr "Ratsinformationssystem (RIS)"
 
 msgid "New Note"
 msgstr "Neue Notiz"
-
-msgid "Date/Time"
-msgstr "Datum/Zeit"
 
 #~ msgid "Parliamentarian is not in this commission."
 #~ msgstr "Parlamentarier:in ist nicht in dieser Kommission."
