Fixes capitalization in translation [skip ci]

--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -2068,7 +2068,7 @@ msgid ""
 "use the following link instead. Please note however that anyone you share "
 "this link with will have permanent access to this information."
 msgstr ""
-"Falls sie die Schlüsselcodes in der Termin-Beschreibung sehen möchten, "
+"Falls Sie die Schlüsselcodes in der Termin-Beschreibung sehen möchten, "
 "können Sie stattdessen den folgenden Link verwenden. Beachten Sie jedoch, "
 "dass jeder, der diesen Link kennt, einen permanenten Zugriff auf diese "
 "Information hat."
