Org: Improves text and content of some reservation related emails
TYPE: Feature
LINK: OGC-2440

--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2025-07-09 10:28+0200\n"
+"POT-Creation-Date: 2025-07-09 13:15+0200\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -127,7 +127,7 @@ msgid "Add"
 msgstr "Aggiungi"
 
 msgid "Remove"
-msgstr "Rimuovere"
+msgstr "Rimuovi"
 
 msgid "Mo"
 msgstr "Lu"
@@ -698,7 +698,7 @@ msgid "Login"
 msgstr "Accedi"
 
 msgid "Citizen Login"
-msgstr "Accesso cittadino"
+msgstr "Accesso cliente"
 
 msgid "About"
 msgstr "Chi Siamo"
@@ -1053,7 +1053,7 @@ msgid "Credit Card Fee"
 msgstr "Commissione sulla carta di credito"
 
 msgid "Pay Offline later"
-msgstr "Paga offline successivamente"
+msgstr "Pagare con fattura"
 
 msgid "at ${time}"
 msgstr "alle ${time}"
@@ -1224,7 +1224,7 @@ msgstr ""
 "disturberemo mai più."
 
 msgid "Below you can see your chat conversation:"
-msgstr "Di seguito potete vedere la vostra conversazione in chat:"
+msgstr "Qui di seguito potete vedere la vostra conversazione in chat:"
 
 msgid "Have a great day!"
 msgstr "Ti auguro una buona giornata!"
@@ -1279,7 +1279,7 @@ msgid ""
 "You are receiving this mail because you subscribed to getting notifications "
 "on new entries in the following directory:"
 msgstr ""
-"Ricevi questa mail perché sei iscritto a ricevere notifiche su nuovi "
+"Ricevi questa mail perché ti sei iscritto a ricevere notifiche su nuovi "
 "elementi nella seguente cartella:"
 
 msgid ""
@@ -1396,9 +1396,10 @@ msgid ""
 "title}. If you no longer want to receive this e-mail please contact an "
 "administrator so they can remove you from the recipients list."
 msgstr ""
-"Dies ist die Benachrichtigung für Notiz zu Reservierungen für ${request.app."
-"org.title}. Wenn Sie diese E-Mail nicht mehr erhalten möchten, kontaktieren "
-"Sie bitte einen Administrator, damit dieser Sie aus der Liste entfernen kann."
+"Questa è la notifica per le note sulle prenotazioni per ${request.app.org."
+"title}. Se non si desidera più ricevere questo messaggio di posta "
+"elettronica si prega di contattare un amministratore in modo che possa "
+"rimuovervi dall'elenco dei destinatari lista"
 
 msgid "Pending approval"
 msgstr "In attesa di approvazione"
@@ -1523,6 +1524,9 @@ msgstr ""
 
 msgid "Key Code"
 msgstr "Codice chiave"
+
+msgid "See all your reservations"
+msgstr "Vedere tutte le prenotazioni"
 
 msgid "The following reservations have unfortunately been cancelled:"
 msgstr "Purtroppo le seguenti prenotazioni sono state annullate:"
@@ -2556,7 +2560,7 @@ msgid "Analytics"
 msgstr "Analitica"
 
 msgid "Holidays"
-msgstr "Festività"
+msgstr "Festività / Vacanze scolastiche"
 
 msgid "Tickets"
 msgstr "Biglietti"
