--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2025-07-09 13:15+0200\n"
+"POT-Creation-Date: 2025-07-09 13:44+0200\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -333,8 +333,8 @@ msgstr "Elimina gruppo parlamentare"
 msgid "Parties"
 msgstr "Partiti"
 
-msgid "Party"
-msgstr "Festa"
+msgid "Political Party"
+msgstr "Partito"
 
 msgid "Do you really want to delete this party?"
 msgstr "Vuoi davvero cancellare questo partito?"
