--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-07-09 13:15+0200\n"
+"POT-Creation-Date: 2025-07-09 13:44+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -766,7 +766,7 @@ msgid "Music"
 msgstr "Musik"
 
 msgid "Party"
-msgstr "Partei"
+msgstr "Party"
 
 msgid "Politics"
 msgstr "Politik"
@@ -1394,6 +1394,9 @@ msgstr "Parlamentarier:in"
 msgid "Role"
 msgstr "Rolle"
 
+msgid "Political Party"
+msgstr "Partei"
+
 msgid "Party role"
 msgstr "Rolle in der Partei"
 
@@ -1423,9 +1426,6 @@ msgstr "Geboren"
 
 msgid "Profession"
 msgstr "Beruf"
-
-msgid "Political Party"
-msgstr "Politische Partei"
 
 msgid "Parliamentary Group"
 msgstr "Fraktion"
