Org: Improves subject and content of some reservation related emails
TYPE: Feature
LINK: OGC-2440

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-07-09 10:23+0200\n"
+"POT-Creation-Date: 2025-07-09 13:44+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -1394,6 +1394,9 @@ msgstr "Parlamentarier:in"
 msgid "Role"
 msgstr "Rolle"
 
+msgid "Political Party"
+msgstr "Partei"
+
 msgid "Party role"
 msgstr "Rolle in der Partei"
 
@@ -1423,9 +1426,6 @@ msgstr "Geboren"
 
 msgid "Profession"
 msgstr "Beruf"
-
-msgid "Political Party"
-msgstr "Politische Partei"
 
 msgid "Parliamentary Group"
 msgstr "Fraktion"
@@ -3942,7 +3942,8 @@ msgstr "iFrame einbetten"
 
 msgid "You can copy the following code to embed this page as an iFrame:"
 msgstr ""
-"Sie können den folgenden Code kopieren um diese Seite als iFrame einzubetten:"
+"Sie können den folgenden Code kopieren, um diese Seite als iFrame "
+"einzubetten:"
 
 msgid ""
 "To display the breadcrumbs you can add ${bc_level} as a parameter to the "
@@ -4151,7 +4152,7 @@ msgid "This site is secret and requires submitting an mTAN"
 msgstr "Diese Seite ist geheim und erfordert die Eingabe eines mTANs"
 
 msgid "This site is not published."
-msgstr "Diese Seite ist nicht publiziert."
+msgstr "Diese Seite ist nicht veröffentlicht."
 
 msgid "This site is not public."
 msgstr "Diese Seite ist nicht öffentlich."
@@ -4207,7 +4208,7 @@ msgid ""
 "Persons living outside the following zipcodes may only reserve this "
 "allocation on the ${date}: ${zipcodes}"
 msgstr ""
-"Personen die ausserhalb der folgenden Postleitzahlen leben können diese "
+"Personen, die ausserhalb der folgenden Postleitzahlen leben, können diese "
 "Reservation erst am ${date} tätigen: ${zipcodes}"
 
 msgid "Quota"
@@ -4695,7 +4696,7 @@ msgid "Do you no longer wish to receive these notifications?"
 msgstr "Möchten Sie diese Benachrichtigungen nicht mehr erhalten?"
 
 msgid "The following reservations have been accepted:"
-msgstr "Die folgenden Reservationen wurden angenommen:"
+msgstr "Die folgenden Reservationen wurden bestätigt:"
 
 msgid ""
 "This is the notification for reservations for ${request.app.org.title}. If "
@@ -4792,7 +4793,7 @@ msgid "The ticket number is"
 msgstr "Ihre Ticket Referenz"
 
 msgid "The following reservations have been rejected:"
-msgstr "Folgende Reservationen wurden abgelehnt:"
+msgstr "Folgende Reservationen sind abgelehnt worden:"
 
 msgid ""
 "This is a notification for the rejected reservations for ${organisation}. If "
@@ -4803,6 +4804,9 @@ msgstr ""
 "${Organisation}. Wenn Sie diese Benachrichtigungen nicht mehr erhalten "
 "möchten, kontaktieren Sie bitte einen Administrator, damit er Sie aus der "
 "Empfängerliste entfernen kann."
+
+msgid "See all your reservations"
+msgstr "Alle Ihre Reservationen einsehen"
 
 msgid "The following reservations have unfortunately been cancelled:"
 msgstr "Die folgenden Reservationen mussten leider abgesagt werden:"
@@ -4874,7 +4878,7 @@ msgstr ""
 "kümmern und uns bei Ihnen melden, sobald neue Informationen verfügbar sind."
 
 msgid "Below you can see your chat conversation:"
-msgstr "Unten sehen Sie Ihr Chat-Gespräch:"
+msgstr "Nachfolgend sehen Sie Ihre Chat-Konversation:"
 
 msgid "This is what happend on the ${org} website over the past week:"
 msgstr ""
@@ -5348,8 +5352,8 @@ msgid ""
 "Thank you for filling out this survey. If there's anything you'd like to "
 "change, click on the \"Edit\"-Button below."
 msgstr ""
-"Vielen Dank für das Ausfüllen dieser Umfrage. Falls Sie noch etwas ändern "
-"möchten, klicken Sie auf den \"Bearbeiten\"-Button unten."
+"Vielen Dank für Ihre Teilnahme an dieser Umfrage. Falls Sie noch etwas "
+"ändern möchten, klicken Sie auf den \"Bearbeiten\"-Button unten."
 
 msgid "No surveys defined yet."
 msgstr "Es wurden noch keine Umfragen definiert."
@@ -5427,7 +5431,7 @@ msgid "Forgot something or have a special request?"
 msgstr "Haben Sie ein besonderes Anliegen oder haben Sie etwas vergessen?"
 
 msgid "Add a message to the ticket."
-msgstr "Fügen Sie der Anfrage eine Nachricht hinzu."
+msgstr "Dann fügen Sie der Anfrage eine Nachricht hinzu."
 
 msgid "New messages have been disabled because the ticket has been closed."
 msgstr "Nachrichten wurden deaktiviert, da das Ticket geschlossen wurde."
@@ -6642,11 +6646,11 @@ msgstr ""
 "hinterlegten Zugangsdaten immer noch gültig sind."
 
 msgid "Your reservations were accepted"
-msgstr "Ihre Reservationen wurden angenommen"
+msgstr "Ihre Reservationen wurden bestätigt"
 
 #, python-format
-msgid "${org} New Reservation(s)"
-msgstr "${org} Neue Reservation(en)"
+msgid "Reservation(s) confirmed ${org} ${resource}"
+msgstr "Bestätigung Reservation(en) ${org} ${resource}"
 
 msgid "The reservations were accepted"
 msgstr "Die Reservationen wurden angenommen"
