--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-07-09 10:23+0200\n"
+"POT-Creation-Date: 2025-07-09 13:44+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -95,7 +95,7 @@ msgid "Closed"
 msgstr "Chiuso"
 
 msgid "Archived"
-msgstr "Archiviato"
+msgstr "Fare Archivio"
 
 msgid "All"
 msgstr "Tutti"
@@ -1202,7 +1202,7 @@ msgstr ""
 "Altrimenti, i notizie sono elencati per intero."
 
 msgid "Events"
-msgstr "Eventi"
+msgstr "Evento"
 
 msgid "Publications"
 msgstr "Pubblicazioni"
@@ -1397,6 +1397,9 @@ msgstr "Parlamentare"
 msgid "Role"
 msgstr "Ruolo"
 
+msgid "Political Party"
+msgstr "Partito"
+
 msgid "Party role"
 msgstr "Ruolo nel partito"
 
@@ -1426,9 +1429,6 @@ msgstr "Cognome da nubile"
 
 msgid "Profession"
 msgstr "Professione"
-
-msgid "Political Party"
-msgstr "Partito politico"
 
 msgid "Parliamentary Group"
 msgstr "Gruppo parlamentare"
@@ -1731,13 +1731,13 @@ msgid "Column width right side"
 msgstr "Larghezza colonna lato destro"
 
 msgid "Contact"
-msgstr "Contatto"
+msgstr "Contatti"
 
 msgid "The address and phone number of the municipality"
 msgstr "L'indirizzo e il numero di telefono del comune"
 
 msgid "Information"
-msgstr "Informazioni"
+msgstr "Conferma"
 
 msgid "Contact Link"
 msgstr "Collegamento ai contatti"
@@ -3107,7 +3107,7 @@ msgid "Re-publish event"
 msgstr "Ripubblica l'evento"
 
 msgid "Newsletter"
-msgstr "Newsletter"
+msgstr "Abbonamento alla newsletter"
 
 msgid "New"
 msgstr "Nuovo"
@@ -3847,7 +3847,7 @@ msgid "External link"
 msgstr "Collegamento esterno"
 
 msgid "More information"
-msgstr "Ulteriori informazioni"
+msgstr "Conferma"
 
 msgid "Change Request"
 msgstr "Richiesta di modifica"
@@ -3935,14 +3935,15 @@ msgid "There was an error while importing your directory!"
 msgstr "Si è verificato un errore durante l'importazione della cartella!"
 
 msgid "Download Form"
-msgstr "Scarica modulo"
+msgstr "Scarica il modulo"
 
 msgid "Embed iFrame"
-msgstr "Incorpora iFrame"
+msgstr "Incorporare iFrame"
 
 msgid "You can copy the following code to embed this page as an iFrame:"
 msgstr ""
-"Puoi copiare il seguente codice per incorporare questa pagina come iFrame:"
+"È possibile copiare il seguente codice per incorporare questa pagina come "
+"iFrame:"
 
 msgid ""
 "To display the breadcrumbs you can add ${bc_level} as a parameter to the "
@@ -3995,13 +3996,13 @@ msgid "Upload Date"
 msgstr "Data di caricamento"
 
 msgid "All Files"
-msgstr "Tutti i file"
+msgstr "Tutti gli articoli"
 
 msgid "No files uploaded yet"
 msgstr "Nessun file caricato"
 
 msgid "All dates"
-msgstr "Tutte le date"
+msgstr "Tutti gli articoli"
 
 msgid ""
 "By default we assume that you only want to select a single time slot and "
@@ -4069,7 +4070,7 @@ msgid "No photo albums defined yet."
 msgstr "Nessun album fotografico ancora definito."
 
 msgid "Skip navigation"
-msgstr "Ignora navigazione"
+msgstr "Migrazione dei link"
 
 msgid "Straight to ..."
 msgstr "Direttamente a ..."
@@ -4226,7 +4227,7 @@ msgid "Additional Information"
 msgstr "Informazioni aggiuntive"
 
 msgid "Location"
-msgstr "Luogo"
+msgstr "Conferma"
 
 msgid "Date and time"
 msgstr "Data e ora"
@@ -4352,7 +4353,7 @@ msgid "Not a publication"
 msgstr "Non una pubblicazione"
 
 msgid "Content"
-msgstr "Contenuto"
+msgstr "Contatti"
 
 msgid "1 page"
 msgstr "1 pagina"
@@ -4457,7 +4458,7 @@ msgid "To activate your account, click confirm below:"
 msgstr "Per attivare il tuo account, fai clic su conferma qui di seguito:"
 
 msgid "Confirm my account"
-msgstr "Conferma il mio account"
+msgstr "Conferma"
 
 msgid ""
 "If you believe this is an error, ignore this message and we'll never bother "
@@ -4718,8 +4719,7 @@ msgstr ""
 #, fuzzy
 msgid "To use your account you need the Yubikey with the serial ${number}"
 msgstr ""
-"Per utilizzare il tuo account hai bisogno della Yubikey con il numero di "
-"serie ${number}"
+"Per utilizzare il tuo account hai bisogno di Yubikey con il seriale ${number}"
 
 msgid ""
 "You are receiving this e-mail because you signed up for the ${org} "
@@ -4789,6 +4789,9 @@ msgstr ""
 "Questa è una notifica per le prenotazioni rifiutate per ${organization}. Se "
 "non desideri più ricevere queste notifiche, contatta un amministratore in "
 "modo che possa rimuoverti dall'elenco dei destinatari."
+
+msgid "See all your reservations"
+msgstr "Vedere tutte le prenotazioni"
 
 msgid "The following reservations have unfortunately been cancelled:"
 msgstr "Purtroppo le seguenti prenotazioni sono state annullate:"
@@ -5010,10 +5013,10 @@ msgstr ""
 "fatto il login."
 
 msgid "To update your subscription, please use this ${Link}"
-msgstr "Per aggiornare la tua iscrizione, utilizza questo ${Link}"
+msgstr "Per aggiornare l'abbonamento, utilizzare questo ${Link}"
 
 msgid "Archive"
-msgstr "Archivia"
+msgstr "Fare Archivio"
 
 msgid "No newsletters yet."
 msgstr "Ancora nessuna newsletter."
@@ -5275,7 +5278,7 @@ msgstr ""
 "album."
 
 msgid "Confirm selection"
-msgstr "Conferma la selezione"
+msgstr "Conferma"
 
 msgid "This newsletter has not been sent yet."
 msgstr "Questa newsletter non è stata ancora inviata."
@@ -5341,7 +5344,7 @@ msgid ""
 "change, click on the \"Edit\"-Button below."
 msgstr ""
 "Grazie per aver compilato questo sondaggio. Se c'è qualcosa che desideri "
-"cambiare, fai clic sul pulsante \"Modifica\" qui sotto."
+"cambiare, fai clic su \"Modifica\" qui sotto."
 
 msgid "No surveys defined yet."
 msgstr "Ancora nessun sondaggio definito."
@@ -6636,8 +6639,8 @@ msgid "Your reservations were accepted"
 msgstr "Le tue prenotazioni sono state accettate"
 
 #, python-format
-msgid "${org} New Reservation(s)"
-msgstr "${org} Nuova/e prenotazione/i"
+msgid "Reservation(s) confirmed ${org} ${resource}"
+msgstr "Prenotazione/i confermata/e ${org} ${resource}"
 
 msgid "The reservations were accepted"
 msgstr "Le prenotazioni sono state accettate"
@@ -6784,7 +6787,7 @@ msgid "No holidays defined"
 msgstr "Nessuna festività definita"
 
 msgid "Link Migration"
-msgstr "Migrazione dei collegamenti"
+msgstr "Migrazione dei link"
 
 msgid "Migrate"
 msgstr "Migra"
