--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -11,7 +11,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: xls-to-po 1.0\n"
-"gengo-order-id: 7782806\n"
 "X-Generator: Poedit 3.0.1\n"
 
 #, python-format
@@ -1413,13 +1412,13 @@ msgid "Parliamentary group role"
 msgstr "Ruolo nel gruppo parlamentare"
 
 msgid "From reservation date"
-msgstr ""
+msgstr "Dalla data di prenotazione"
 
 msgid "Filter Payments"
 msgstr "Filtra pagamenti"
 
 msgid "To reservation date"
-msgstr ""
+msgstr "Alla data di prenotazione"
 
 msgid "Ticket created from date"
 msgstr "Ticket creato dalla data"
@@ -6455,7 +6454,7 @@ msgid "Your payment has been refunded"
 msgstr "Il tuo pagamento è stato rimborsato"
 
 msgid "No payments found for PDF generation"
-msgstr ""
+msgstr "Nessun pagamento trovato per la generazione di PDF"
 
 msgid "Receivables"
 msgstr "Crediti"
