Add batch action to set payment state
- remove deprecated batch-mark-invoiced functionality
- Previously one could only set state to 'invoiced' but
couldn't change in case of error.

--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -1731,10 +1731,10 @@ msgid "Fee:"
 msgstr "Gebühr:"
 
 msgid "Export Bill run as PDF"
-msgstr "Rechnungslauf als PDF exportieren"
+msgstr "PDF mit aktuellem Filter generieren"
 
-msgid "Ausgewählte als fakturiert markieren"
-msgstr ""
+msgid "Mark selected as invoiced"
+msgstr "Ausgewählte als fakturiert markieren"
 
 msgid "No payments yet."
 msgstr "Noch keine Zahlungen."
